remove horizontal scroll bug

--- a/override.css
+++ b/override.css
@@ -1,3 +1,8 @@
+html {
+    max-width: 100vw;
+    overflow-x: hidden;
+}
+
 #route-input {
     position:fixed; 
     top: 90px; 
